--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
         <title>document</title>
         <style>
             body{
-                background-image: url(img/flag.psd);
-                background-repeat: no-repeat;
-                background-position: 332px 605px;
+                background-image: url(img/flag.png),url(img/ra.png);
+                background-repeat: no-repeat,no-repeat;
+                background-position: 300px 430px,1050px 430px;
+                 margin-top: 350px; 
+                 
             }
             header{
                 height: 70px;
@@ -48,6 +50,7 @@
             }
             .s_main{
                 height: 800px;
+                border: 1px dashed black;
             }
             .s_flexnav{
                 height: 800px;
@@ -77,7 +80,7 @@
             <header class=" position-relative">
                 <nav class="navbar navbar-expand-lg navbar-light float-end">  
                       <a class="navbar-brand" href="#"><i class="far fa-life-ring"></i></a>
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <ul class="navbar-nav me-auto mb-3 mb-lg-0">
                           <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="#"><i class="far fa-comments"></i></a>
                           </li>
@@ -93,7 +96,7 @@
             <div class="s_main row m-0">
                 <div class="col-2 mb-3">
                 <nav class="nav flex-column s_flexnav position-relative">
-                    <a class="nav-link" aria-current="page" href="#"><i class="fas fa-home m-2"></i>Home</a>
+                    <a class="nav-link" aria-current="page" href="#"><i class="fas fa-home m-1"></i>Home</a>
                     <a class="nav-link active" href="#"><i class="fas fa-chart-bar m-2"></i>Client Dashboard <i class="fas fa-chevron-right m-2"></i></a>
                     <a class="nav-link" href="#"><i class="far fa-envelope m-2"></i>Solutions</a>
                     <a class="nav-link" href="#"><i class="fas fa-file-invoice m-2"></i>payment History</a>
@@ -103,7 +106,9 @@
                     <a class="nav-link" href="#"><i class="fas fa-cog m-2"></i>settings</a>
                 </nav>
             </div>
-            </div>
+                <div class="col-10 mb-2 text-center mt-5">
+                    <h3> Create Your first Project &amp; get Started</h3>
+                </div>  
         </div>  
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
     </body>
